Add timer front page

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2024 Paris Olympic Data Unofficial API</title>
     <link rel="stylesheet" href="/static/styles.css">
+    
 </head>
 <body>
     <div class="container">
@@ -12,6 +13,7 @@
             <h1>2024 Paris Olympic data unofficial API</h1>
         </header>
         <main>
+            <div id="timer" style="display: none;">00:00:00</div>
             <div class="medal-table">
                 <div class="titles">
                     <span class="title-rank">Rank</span>
@@ -42,5 +44,6 @@
     <footer>
         <p>&copy; All data and rights related to Olympic Games values and information are property of the International Olympic Committee (IOC).</p>
     </footer>
+    <script src="/static/script.js"></script>
 </body>
 </html>
