--- a/static/styles.css
+++ b/static/styles.css
@@ -96,6 +96,16 @@ header h1 {
     font-weight: bold;
 }
 
+.titles span,
+.row .rank,
+.row .country-info,
+.row .medal-info span {
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+    color: #e0e0e0;
+}
+
 .medal {
     display: inline-block;
     width: 12px;
@@ -127,4 +137,10 @@ footer {
     padding: 20px;
     text-align: center;
     color: #e0e0e0;
+}
+
+#timer {
+    font-size: 2em;
+    text-align: center;
+    margin-top: 20px;
 }
