--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <h1>2024 Paris Olympic data unofficial API</h1>
         </header>
         <main>
-            <div id="timer" style="display: none;">00:00:00</div>
+            <div id="timer" class="timer" style="display: none;">00:00:00</div>
             <div class="medal-table">
                 <div class="titles">
                     <span class="title-rank">Rank</span>
